tests/invalid_semantic/type_mismatch.f
PROGRAM MISMATCH
INTEGER A
LOGICAL B
B = .TRUE.
A = B
END
